--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
+    <color name="lime">#C3D010</color>
+
+    <color name="alpha_lime_50">#80C3D010</color>
+    <color name="alpha_white_lime">#f2f2f2</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
