--- a/app/src/main/res/layout/splash_screen_activity.xml
+++ b/app/src/main/res/layout/splash_screen_activity.xml
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:textColor="@color/lime"
+        android:textColor="@color/dark_teal"
         android:textSize="50sp"
         android:textStyle="bold"/>
 
