--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,11 +2,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/darker_teal</item>
         <!--<item name="colorAccent">@color/colorAccent</item>-->
-        <item name="colorControlNormal">@color/alpha_lime_50</item>
-        <item name="colorControlActivated">@color/lime</item>
+        <item name="colorControlNormal">@color/darker_teal_80</item>
+        <item name="colorControlActivated">@color/dark_teal</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
     <style name="FullscreenTheme" parent="AppTheme">
@@ -17,13 +18,13 @@
     </style>
 
     <style name="EditTextStyle" parent="@android:style/Widget.EditText">
-        <item name="android:textColorHint">@color/alpha_lime_50</item>
+        <item name="android:textColorHint">@color/darker_teal_80</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="AppTheme.PositiveButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorButtonNormal">@color/lime</item>
+        <item name="colorButtonNormal">@color/dark_teal</item>
         <item name="colorControlHighlight">@color/alpha_white_lime</item>
     </style>
 
@@ -31,4 +32,8 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">false</item>
+        <item name="color">@android:color/black</item>
+    </style>
 </resources>
