master Added crest tot he middle of the toolbar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/first_page_drawer"/>
-    
+    <fragment
+        android:id="@+id/fragment_one"
+        android:name="com.example.jocke.kotlin.OverViewFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
