--- a/app/src/main/res/layout/navigation_view_header_layout.xml
+++ b/app/src/main/res/layout/navigation_view_header_layout.xml
@@ -11,9 +11,9 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:background="@drawable/x"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/lif"/>
 
         <TextView
             android:layout_width="wrap_content"
