--- a/app/src/main/res/layout/overview_drawer_layout.xml
+++ b/app/src/main/res/layout/overview_drawer_layout.xml
@@ -7,7 +7,4 @@
     android:layout_height="match_parent"
     android:layout_gravity="start"
     app:headerLayout="@layout/navigation_view_header_layout"
-    app:menu="@menu/main_navigation_drawer_items">
-
-
-</android.support.design.widget.NavigationView>
+    app:menu="@menu/main_navigation_drawer_items"/>
