--- a/app/src/main/res/layout/navigation_view_header_layout.xml
+++ b/app/src/main/res/layout/navigation_view_header_layout.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/lif"/>
+            android:background="@drawable/crest_lindsdal"/>
 
         <TextView
             android:layout_width="wrap_content"
