--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_activity_framelayout"
     android:layout_width="match_parent"
@@ -7,9 +7,4 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <fragment
-        android:id="@+id/fragment_one"
-        android:name="com.example.jocke.kotlin.OverViewFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</RelativeLayout>
+</FrameLayout>
