--- a/app/src/main/res/layout/next_game_overview.xml
+++ b/app/src/main/res/layout/next_game_overview.xml
@@ -111,6 +111,7 @@
                     android:textSize="16sp"/>
 
                 <ImageButton
+                    android:id="@+id/line_up_image_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackground"
