--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/darker_teal</item>
 
-        <item name="colorControlNormal">@color/darker_teal_80</item>
-        <item name="colorControlActivated">@color/dark_teal</item>
+        <item name="colorControlNormal">#000000</item>
+        <item name="colorControlActivated">#000000</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
