--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:textColor="@color/dark_teal"
+        android:textColor="@color/darker_yellow"
         android:textSize="50sp"
         android:textStyle="bold"/>
 
@@ -37,9 +37,9 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/apirix_logo"/>
+            android:background="@drawable/crest_lindsdal"/>
 
         <EditText
             android:layout_width="match_parent"
