--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -2,6 +2,7 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
+                android:id="@+id/overview_fragment_container"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:orientation="horizontal"
